Fix game persistence for starting a new game